Salesforce Dev Demo/force-app/main/default/objects/SAID_Number_Search_Info__c/SAID_Number_Search_Info__c.object-meta.xml
<CustomObject>
    <label>SAID Number Search Info</label>
    <nameField>
        <displayFormat>SAID-{0000000}</displayFormat>
        <label>SAID Number Search Info Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SAID Number Search Infos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>