Salesforce Dev Demo/force-app/main/default/objects/SAID_Number_Search_Info__c/fields/Birth_Date__c.field-meta.xml
<CustomField>
    <fullName>Birth_Date__c</fullName>
    <description>Birth date extracted from the SA ID</description>
    <label>Birth Date</label>
    <type>Date</type>
</CustomField>