Salesforce Dev Demo/force-app/main/default/objects/SAID_Number_Search_Info__c/fields/Citizenship__c.field-meta.xml
<CustomField>
    <fullName>Citizenship__c</fullName>
    <description>Citizenship Extracted from the SA ID</description>
    <label>Citizenship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SA Citizen</fullName>
            </value>
            <value>
                <fullName>Permanent Resident</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>