Salesforce Dev Demo/force-app/main/default/objects/SAID_Number_Search_Info__c/fields/SA_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>SA_ID_Number__c</fullName>
    <description>Store the SA ID Number</description>
    <externalId>true</externalId>
    <inlineHelpText>SA ID Number of user</inlineHelpText>
    <label>SA ID Number</label>
    <length>13</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>