Salesforce Dev Demo/force-app/main/default/objects/SAID_Number_Search_Info__c/fields/Searches__c.field-meta.xml
<CustomField>
    <fullName>Searches__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of times this SA Id is searched in the system</description>
    <inlineHelpText>Number of times this SA Id is searched in the system</inlineHelpText>
    <label># Searches</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>