Salesforce Dev Demo/force-app/main/default/objects/SAID_Number_Search_Info__c/validationRules/SA_ID_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>SA_ID_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(SA_ID_Number__c,&quot;/(([0-9]{2})(0|1)([0-9])([0-3])([0-9]))([ ]?)(([ 0-9]{4})([ ]?)([ 0-1][8]([ ]?)[ 0-9]))/&quot;))</errorConditionFormula>
    <errorDisplayField>SA_ID_Number__c</errorDisplayField>
    <errorMessage>Id Number does not seems authentic. Please add valid Id number.</errorMessage>
</ValidationRule>