Salesforce Dev Demo/force-app/main/default/objects/SAID_Number_Search_Info__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SA_ID_Number__c</columns>
    <columns>Birth_Date__c</columns>
    <columns>Citizenship__c</columns>
    <columns>Gender__c</columns>
    <columns>Searches__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>